# serializer version: 1
# name: test_bluetooth_error_unavailable
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Remaining open time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 60.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_remaining_open_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_bluetooth_error_unavailable.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Manual watering time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 60,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_manual_watering_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_bluetooth_error_unavailable.2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Remaining open time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 60.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_remaining_open_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_bluetooth_error_unavailable.3
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Manual watering time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 60,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_manual_watering_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_connected_state
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Sensor threshold',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_sensor_threshold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_connected_state.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Sensor threshold',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_sensor_threshold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '45.0',
  })
# ---
# name: test_setup[98bd0f13-0b0e-421a-84e5-ddbf75dc6de4-raw1-number.mock_title_remaining_open_time]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Remaining open time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 60.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_remaining_open_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100.0',
  })
# ---
# name: test_setup[98bd0f13-0b0e-421a-84e5-ddbf75dc6de4-raw1-number.mock_title_remaining_open_time].1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Remaining open time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 60.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_remaining_open_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_setup[98bd0f13-0b0e-421a-84e5-ddbf75dc6de4-raw1-number.mock_title_remaining_open_time].2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Remaining open time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 60.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_remaining_open_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[98bd0f13-0b0e-421a-84e5-ddbf75dc6de4-raw1-number.mock_title_remaining_open_time].3
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Remaining open time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 60.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_remaining_open_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_setup[98bd0f13-0b0e-421a-84e5-ddbf75dc6de4-raw2-number.mock_title_open_for]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Open for',
      'max': 1440,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_open_for',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[98bd0f14-0b0e-421a-84e5-ddbf75dc6de4-raw0-number.mock_title_manual_watering_time]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Manual watering time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 60,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_manual_watering_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100.0',
  })
# ---
# name: test_setup[98bd0f14-0b0e-421a-84e5-ddbf75dc6de4-raw0-number.mock_title_manual_watering_time].1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Manual watering time',
      'max': 86400,
      'min': 0.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 60,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_manual_watering_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
